# demo_hello_world

./: CMakeLists.txt
hello_world/device/: increasing_1.cl  increasing_2.cl
hello_world/host/src/: main.cpp  main.cpp.16.1
